feat: simplify verification endpoints to single admin-only verification servce
